# jgd-cmake-modules

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  Pipfile  README.md  README.rst  conanfile.py  md_readme.md  sphinx-requirements.txt  vcpkg.json
cmake-modules/: JgdAddDefaultDoxygenDocs.cmake  JgdAddDefaultExecutable.cmake  JgdAddDefaultLibrary.cmake  JgdAddDefaultSourceSubdirectories.cmake  JgdAddDefaultTestExecutable.cmake  JgdAddExecutable.cmake  JgdAddLibrary.cmake  JgdAddTestExecutable.cmake  JgdAllModules.cmake  JgdBasicPackageConfig.cmake  JgdBasicPackageConfigFile.cmake.in  JgdCanonicalStructure.cmake  JgdCheckSet.cmake  JgdClangFormat.cmake  JgdConfigPackageFileNames.cmake  JgdConfigureFiles.cmake  JgdDefaultCompileOptions.cmake  JgdDefaultPkgConfigFile.cmake  JgdDefaultTargetProps.cmake  JgdDoxygenDocs.cmake  JgdEnableDefaultIPO.cmake  JgdExpandDirectories.cmake  JgdFileNaming.cmake  JgdFindConanPackage.cmake  JgdGenDefaultLibraryName.cmake  JgdGetDefaultLibraryName.cmake  JgdGetDefaultLibraryTargetName.cmake  (+17 more)
tests/: CMakeLists.txt  README.md  README.rst  testingFunctions.cmake
tests/daemon/: CMakeLists.txt  README.md
tests/daemon/cmake/: daemon-config.cmake.in  daemon-libdaemon-config.cmake.in
tests/daemon/daemon/: CMakeLists.txt  exec.cpp  exec.hpp  exec.mpp  exec.test.cpp  features.mpp  main.cpp
tests/daemon/libdaemon/: CMakeLists.txt  protocol.cpp  protocol.hpp  protocol.mpp
tests/libclangformat/: CMakeLists.txt
tests/libclangformat/cmake/: libclangformat_config.hpp.in
tests/libclangformat/libclangformat-core/libclangformat/core/: CMakeLists.txt  reader.cpp  reader.hpp
tests/libclangformat/libclangformat-extra/libclangformat/extra/: extra.cpp  extra.hpp  more.cpp  more.hpp
tests/libclangformat/tests/: CMakeLists.txt  test.cpp
tests/libcomp-project/: CMakeLists.txt
tests/libcomp-project/cmake/: libcomp-project_config.hpp.in
tests/libcomp-project/libcomp-project-core/libcomp-project/core/: CMakeLists.txt  reader.cpp  reader.hpp
tests/libcomp-project/libcomp-project-extra/libcomp-project/extra/: CMakeLists.txt  extra.cpp  extra.hpp  more.cpp  more.hpp
tests/libcomponents/: CMakeLists.txt
tests/libcomponents/cmake/: libcomponents-config.cmake.in  libcomponents-core-config.cmake.in  libcomponents-extra-config.cmake.in  libcomponents_config.hpp.in
tests/libcomponents/libcomponents/: CMakeLists.txt  libcomponents_config.hpp.in
tests/libcomponents/libcomponents-core/libcomponents/core/: CMakeLists.txt  reader.cpp  reader.hpp
tests/libcomponents/libcomponents-core/libcomponents/core/private/: CMakeLists.txt  private.cpp  private.hpp
tests/libcomponents/libcomponents-extra/libcomponents/extra/: CMakeLists.txt  extra.cpp  extra.hpp  extra_config.hpp.in  more.cpp  more.hpp
tests/libcomponents/tests/: CMakeLists.txt  test.cpp
tests/libcstr/: CMakeLists.txt  README.md
tests/libcstr/cmake/: libcstr-config.cmake.in
tests/libcstr/libcstr/: CMakeLists.txt  cstr.c  cstr.h  cstr.test.c
tests/libcstr/licenses/: license2.txt
tests/libcstr/tests/: CMakeLists.txt  test.c
tests/libdocs/: CMakeLists.txt  README.md
tests/libdocs-proj/: CMakeLists.txt
tests/libdocs-proj/libdocs-proj/: CMakeLists.txt  factory.cpp  factory.hpp  widget.cpp  widget.hpp
tests/libdocs-proj/tests/: CMakeLists.txt  test.cpp
tests/libdocs/cmake/: libsingle_config.hpp.in
tests/libdocs/libdocs/: widget.cpp
tests/libdocs/tests/: CMakeLists.txt  test.cpp
tests/libdoxydocs/: CMakeLists.txt  README.md
tests/libdoxydocs/cmake/: libdoxydocs_config.hpp.in
tests/libdoxydocs/docs/: CMakeLists.txt
tests/libdoxydocs/libdoxydocs/: factory.cpp  factory.hpp  widget.cpp
tests/libdoxydocs/tests/: CMakeLists.txt  test.cpp
tests/libheaders/: CMakeLists.txt
tests/libheaders/cmake/: libheaders-config.cmake.in  libheaders_config.hpp.in
tests/libheaders/libheaders/: CMakeLists.txt  equality.hpp  equality.test.cpp  libheaders_config.hpp.in  sum.hpp  sum.test.cpp
tests/libheaders/tests/: CMakeLists.txt  integration_test.cpp
tests/libsingle/: .clang-format  CMakeLists.txt  README.md
tests/libsingle/cmake/: libsingle-config.cmake.in  libsingle_config.hpp.in
tests/libsingle/docs/: CMakeLists.txt
tests/libsingle/libsingle/: CMakeLists.txt  factory.cpp  factory.hpp  libsingle_config.hpp.in  steal.hpp  widget.cpp  widget.hpp  widget.test.cpp
tests/libsingle/libsingle/material/: CMakeLists.txt  steal.cpp  steal.hpp
tests/libsingle/tests/: CMakeLists.txt  test.cpp
tests/many-exec/: .clang-format  CMakeLists.txt
tests/many-exec/cmake/: many-exec-compiler-config.cmake.in  many-exec-config.cmake.in  many-exec-formatter-config.cmake.in  manyExecBuildTargetOptions.cmake
tests/many-exec/many-exec/: CMakeLists.txt  many-exec_config.hpp.in  many_exec_config.hpp.in  shared.hpp
tests/many-exec/many-exec/compiler/: CMakeLists.txt  compile.hpp  compile.test.cpp  main.cpp
tests/many-exec/many-exec/formatter/: CMakeLists.txt  main.cpp  reformat.hpp  reformat.test.cpp
tests/many-exec/many-exec/formatter/formats/: CMakeLists.txt  internal_to_upper.cpp  internal_to_upper.hpp  upper_format.cpp  upper_format.hpp
tests/many-exec/tests/: CMakeLists.txt  integration.cpp
tests/single-exec/: CMakeLists.txt
tests/single-exec-project/: CMakeLists.txt
tests/single-exec-project/cmake/: single-exec-project_config.hpp.in
tests/single-exec-project/single-exec-project/: CMakeLists.txt  main.cpp  test.cpp
tests/single-exec/cmake/: single-exec-config.cmake.in
tests/single-exec/single-exec/: CMakeLists.txt  exec.cpp  exec.hpp  exec.test.cpp  main.cpp  single-exec_config.hpp.in  single_exec_config.hpp.in  test.cpp  test.hpp
tests/single-exec/tests/: CMakeLists.txt  integration.cpp
tests/test-project-consumption/: CMakeLists.txt  use_libcomponents.cpp  use_libcomponents_core.cpp  use_libcomponents_extra.cpp  use_libcstr.c  use_libdaemon.cpp
tests/test-project-consumption/contrib/: CMakeLists.txt  libcomponents  libcstr  libheaders  libsingle  many-exec  single-exec
(+89 files in other folders)
